# qibo-proposal

./: .gitignore  README.md  pyproject.toml
qibo/: __init__.py  array.py  circuit.py  engine.py  gate.py  helper.py  matrix.py  operator.py
