[tool.poetry]
name = "qibo"
version = "0.1.0"
description = ""
authors = ["Sergio Sánchez Ramírez <sergio.sanchez.ramirez@bsc.es>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
