[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qibo"
version = "0.1.0"
description = ""
authors = ["Sergio Sánchez Ramírez <sergio.sanchez.ramirez@bsc.es>"]
dependencies = [
	"numpy = ^1.22.3"
]

[project.optional-dependencies]
dev = [
	"pytest>=5.2",
	"black>=22.3.0",
]

[tool.setuptools]
packages = ["qibo"]

