[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qibo"
version = "0.1.0"
description = ""
dependencies = [
	"numpy>=1.22",
	"networkx"
]

[project.optional-dependencies]
dev = [
	"pytest>=5.2",
	"black>=22.3.0",
	"pylint",
]

[tool.setuptools]
packages = ["qibo"]

